--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -96,7 +96,18 @@ img {
 }
 
 /*=============== THEME ===============*/
+.nav__buttons{
+  display: flex;
+  align-items: center;
+  column-gap: 1.5rem;
+}
 
+.change-theme{
+  font-size: 1.25rem;
+  color: var(--title-color);
+  cursor: pointer;
+  transition: color .3s;
+}
 
 /*========== Variables Dark theme ==========*/
 body.dark-theme {
@@ -110,8 +121,26 @@ body.dark-theme {
     Color changes in some parts of 
     the website, in light theme
 ==========*/
+.dark-theme .nav,
+.dark-theme .nav__menu,
+.dark-theme .scrollup{
+  background-color: var(--container-color);
+  box-shadow: 0 4px 20px hsla(207, 24%, 8%, .4);
+}
 
+.dark-theme .home__shape-waves,
+.dark-theme .home__shape-circle,
+.dark-theme .qualification__img{
+  filter: invert(1);
+}
 
+.dark-theme .home__social-link{
+  color: var(--title-color);
+}
+
+.dark-theme .section__border{
+  border-bottom: 1px solid hsl(207, 4%, 32%);
+}
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
   max-width: 1023px;
@@ -175,6 +204,9 @@ body.dark-theme {
   align-items: center;
   background-color: var(--body-color);
   box-shadow: 0 4px 20px hsla(207, 24%, 35%, .1);
+  padding-inline: 1.5rem;
+  border-radius: 3rem;
+  transition: background .4s; /* for dark mode animation */
 }
 
 .nav__logo,
@@ -247,6 +279,9 @@ body.dark-theme {
 }
 
 /* Active link */
+.active-link{
+  color: var(--title-color);
+}
 
 
 /*=============== HOME ===============*/
@@ -275,6 +310,7 @@ body.dark-theme {
   justify-self: center;
   border-radius: 6.25rem;
   place-items: center;
+  transition: background .4s; /* for dark mode animation */
 }
 
 .home__perfil{
@@ -330,7 +366,7 @@ body.dark-theme {
 }
 
 .home__social-link:nth-child(2):hover{
-  color: #0b0c0d;
+  color: #22d215;
 }
 
 .home__social-link:nth-child(3):hover{
@@ -408,6 +444,7 @@ body.dark-theme {
   border-radius: 3rem;
   place-items: center;
   margin-bottom: 1rem;
+  transition: background .4s; /* for dark mode animation */
 }
 
 .skills__blob img{
@@ -514,6 +551,7 @@ body.dark-theme {
   text-align: center;
   padding: 3.5rem 1rem;
   border-radius: 7.25rem;
+  transition: background .4s; /* for dark mode animation */
 }
 
 .services__card i{
@@ -633,28 +671,249 @@ body.dark-theme {
   background-color: var(--title-color);
 }
 
-/*=============== TESTIMONIAL ===============*/
-
-
-/* Swiper class */
 
 
 /*=============== CONTACT ===============*/
 
+.contact__container{
+  row-gap: 3.5rem;
+}
 
+.contact__title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: .5rem;
+  font-size: var(--small-font-size);
+  font-weight: var(--font-semi-bold);
+  margin-bottom: 2.5rem;
+}
+
+.contact__title i{
+  font-size: 1rem;
+  font-weight: initial;
+}
+
+.contact__info,
+.contact__data,
+.contact__form{
+  display: grid;
+}
+
+.contact__info{
+  row-gap: 2rem;
+}
+
+.contact__data{
+  row-gap: .75rem;
+}
+
+.contact__data-title{
+  font-size: var(--small-font-size);
+  color: var(--text-color-light);
+}
+
+.contact__data-info{
+  font-size: var(--small-font-size);
+  font-family: var(--title-font);
+  color: var(--title-color);
+}
+
+.contact__button{
+  width: max-content;
+  display: inline-flex;
+  align-items: center;
+  column-gap: .5rem;
+  color: var(--title-color);
+  font-size: var(--small-font-size);
+}
+
+.contact__button i{
+  font-size: 1rem;
+  transition: transform .3s;
+}
+
+.contact__button:hover i{
+  transform: translateX(.25rem);
+}
+
+.contact__form{
+  position: relative;
+  row-gap: 2rem;
+}
+
+.contact__form-div{
+  position: relative;
+  height: 4rem;
+}
+
+.contact__form-input{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 2px solid var(--text-color-light);
+  border-radius: 2rem;
+  padding: 1.5rem;
+  font-size: var(--normal-font-size);
+  font-family: var(--title-font);
+  color: var(--title-color);
+  background: none;
+  outline: none;
+  z-index: 1;
+}
+
+.contact__form-tag{
+  position: absolute;
+  top: -.75rem;
+  left: 1.25rem;
+  z-index: 10;
+  background-color: var(--body-color);
+  color: var(--title-color);
+  font-size: var(--smaller-font-size);
+  font-weight: var(--font-medium);
+  padding: .35rem;
+  transition: background .4s; /* for dark mode animation */
+}
+
+.contact__form-area{
+  height: 10rem;
+}
+
+.contact__form-area textarea{
+  resize: none;
+}
+
+.contact__form .contact__button{
+  border: none;
+  background: none;
+  font-size: var(--h2-font-size);
+  font-family: var(--title-font);
+  font-weight: var(--font-semi-bold);
+  cursor: pointer;
+  outline: none;
+  margin-top: .75rem;
+}
+
+.contact__form .contact__button i{
+  font-size: 1.5rem;
+  font-weight: initial;
+}
+
+.contact__message{
+  font-size: var(--small-font-size);
+  position: absolute;
+  bottom: 2.8rem;
+  left: 1.5rem;
+}
 /* Status color */
+.color-red{
+  color: hsl(4, 71%, 50%);
+}
 
-
+.color-blue{
+  color: hsl(207, 56%, 45%);
+}
 /*=============== FOOTER ===============*/
 
+.footer__container{
+  padding: 3rem 0 7rem;
+  text-align: center;
+}
+
+.footer__title{
+  font-size: var(--h1-font-size);
+  font-weight: var(--font-semi-bold);
+  margin-bottom: 1rem;
+}
+
+.footer__list,
+.footer__social{
+  display: flex;
+  justify-content: center;
+}
+
+.footer__list{
+  margin: 2.5rem 0;
+  column-gap: 2.5rem;
+}
+
+.footer__link{
+  color: var(--title-color);
+}
+
+.footer__link:hover{
+  text-decoration: underline;
+}
+
+.footer__social{
+  column-gap: 1.25rem;
+}
+
+.footer__social-link{
+  font-size: 1.5rem;
+  color: var(--text-color-light);
+  transition: transform .3s;
+}
+
+.footer__social-link:hover{
+  transform: translateY(-.15rem);
+}
+
+.footer__social-link:nth-child(1):hover{
+  color: #0077B5;
+}
+
+.footer__social-link:nth-child(2):hover{
+  color: #22d215;
+}
+
+.footer__social-link:nth-child(3):hover{
+  color: #FF3366;
+}
 
 /*=============== SCROLL BAR ===============*/
+::-webkit-scrollbar{
+  width: .6rem;
+  border-radius: .5rem;
+  background-color: hsl(207, 40%, 75%);
+}
 
+::-webkit-scrollbar-thumb{
+  background-color: hsl(207, 40%, 65%);
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background-color: hsl(207, 40%, 55%);
+}
 
 /*=============== SCROLL UP ===============*/
 
+.scrollup{
+  position: fixed;
+  right: 1rem;
+  bottom: -30%;
+  background-color: var(--body-color);
+  box-shadow: 0 4px 12px hsl(207, 24%, 35%,  .15);
+  display: inline-flex;
+  padding: .35rem;
+  border-radius: .25rem;
+  font-size: 1.1rem;
+  color: var(--title-color);
+  z-index: var(--z-tooltip);
+  transition: bottom .3s, transform .3s;
+}
 
+.scrollup:hover{
+  transform: translateY(-.25rem);
+  background-color: hsl(207, 40%, 55%);
+}
 /* Show Scroll Up*/
+
+.show-scroll{
+  bottom: 7.5rem;
+}
 
 
 /*=============== BREAKPOINTS ===============*/
