--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -922,7 +922,7 @@ body.dark-theme {
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
-@media screen and (min-width: 340px){
+@media screen and (max-width: 390px){
   .container{
     margin-inline: 1rem;
   }
